--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Valentine's Love Letter</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Background music (Mine by Taylor Swift) -->
   <audio id="background-music" autoplay loop>
-    <source src="path_to_your_music/Mine_Taylor_Swift.mp3" type="audio/mp3">
+    <source src="media/mine.mp3" type="audio/mp3">
   </audio>
 
   <!-- Section: Our Memories -->
   <section id="memories" class="section">
     <h1>Our Memories</h1>
     <div class="gallery">
-      <!-- Add your 10 pictures here -->
-      <img src="path_to_your_image1.jpg" alt="Memory 1">
-      <img src="path_to_your_image2.jpg" alt="Memory 2">
-      <img src="path_to_your_image3.jpg" alt="Memory 3">
-      <img src="path_to_your_image4.jpg" alt="Memory 4">
-      <img src="path_to_your_image5.jpg" alt="Memory 5">
-      <img src="path_to_your_image6.jpg" alt="Memory 6">
-      <img src="path_to_your_image7.jpg" alt="Memory 7">
-      <img src="path_to_your_image8.jpg" alt="Memory 8">
-      <img src="path_to_your_image9.jpg" alt="Memory 9">
-      <img src="path_to_your_image10.jpg" alt="Memory 10">
+      <!-- Linking images correctly -->
+      <img src="media/photo1.JPG" alt="Memory 1">
+      <img src="media/photo2.jpg" alt="Memory 2">
+      <img src="media/photo3.jpg" alt="Memory 3">
+      <img src="media/photo4.JPG" alt="Memory 4">
+      <img src="media/photo5.JPG" alt="Memory 5">
+      <img src="media/photo6.JPG" alt="Memory 6">
+      <img src="media/photo7.jpg" alt="Memory 7">
+      <img src="media/photo8.jpg" alt="Memory 8">
+      <img src="media/photo9.jpg" alt="Memory 9">
+      <img src="media/photo10.JPG" alt="Memory 10">
       <!-- Videos will autoplay and be muted -->
       <video autoplay muted loop>
-        <source src="path_to_video/video1.mp4" type="video/mp4">
+        <source src="media/video1.mov" type="video/mp4">
       </video>
       <video autoplay muted loop>
-        <source src="path_to_video/video2.mp4" type="video/mp4">
+        <source src="media/video2.mov" type="video/mp4">
       </video>
       <video autoplay muted loop>
-        <source src="path_to_video/video3.mp4" type="video/mp4">
+        <source src="media/video3.mov" type="video/mp4">
       </video>
     </div>
   </section>
